--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+
 body
 {
-    color: red;
+    font-family: 'Montserrat', sans-serif;
+}
+.HeaderContainer
+{
+    background-color: cadetblue;
+    min-height: 40rem;
+}
+.MainContainer
+{
+    background-color: darkslategrey;
 }
