--- a/style.css
+++ b/style.css
@@ -1,15 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 
+@media (max-width: 768px)
+{
+    .TitleContainer
+    {
+        text-align: center;
+    }
+}
+
+/*#region Main*/
 body
 {
     font-family: 'Montserrat', sans-serif;
+    background-color: rgb(110, 177, 132);
 }
-.HeaderContainer
+.container
 {
-    background-color: cadetblue;
-    min-height: 40rem;
+    background-color: whitesmoke;
+    margin-left: 0;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),0 6.7px 5.3px rgba(0, 0, 0, 0.048),0 12.5px 10px rgba(0, 0, 0, 0.06),0 22.3px 17.9px rgba(0, 0, 0, 0.072),0 41.8px 33.4px rgba(0, 0, 0, 0.086),0 100px 80px rgba(0, 0, 0, 0.12);
 }
-.MainContainer
+.HeaderContainer1
 {
-    background-color: darkslategrey;
+    width: 80%;
+    opacity: 40%;
 }
+.HeaderContainer2
+{
+    width: 90%;
+    opacity: 70%;
+}
+.CustomHr
+{
+    background-color: rgb(110, 177, 132);
+}
+/*#endregion*/
+
+/*#region Arrow*/
+.ArrowContainer
+{
+    min-height: 4rem;
+}
+.CustomArrow, .CustomArrow:before
+{
+    position: absolute;
+    left: 50%;
+}
+.CustomArrow
+{
+    width: 2.4rem;
+    height: 2.4rem;
+    margin: -20px 0 0 -20px;
+    -webkit-transform: rotate(45deg);
+    border-left: none;
+    border-top: none;
+    border-right: 2px rgb(110, 177, 132) solid;
+    border-bottom: 2px rgb(110, 177, 132) solid;
+}
+.CustomArrow:before
+{
+    content: '';
+    width: 1.4rem;
+    height: 1.4rem;
+    top: 50%;
+    margin: -10px 0 0 -10px;
+    border-left: none;
+    border-top: none;
+    border-right: 1px rgb(110, 177, 132) solid;
+    border-bottom: 1px rgb(110, 177, 132) solid;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: CustomArrow;
+}
+@keyframes CustomArrow
+{
+    0%
+    {
+        opacity: 1;
+    }
+    100%
+    {
+        opacity: 0;
+        transform: translate(-10px, -10px);
+    }
+}
+/*#endregion*/
