--- a/style.css
+++ b/style.css
@@ -14,6 +14,22 @@ body
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(110, 177, 132);
 }
+a:link
+{
+    color: rgb(58, 194, 103);
+}
+a:visited
+{
+    color: rgb(0, 95, 8);
+}
+a:hover
+{
+    color: rgb(0, 0, 0);
+}
+a:active
+{
+    color: rgb(0, 0, 0);
+}
 .container
 {
     background-color: whitesmoke;
